unpackaged/main/default/objects/Account_Partner_Contract__c/Account_Partner_Contract__c.object-meta.xml
<CustomObject>
    <label>Account Partner Contract</label>
    <nameField>
        <displayFormat>A-PC-{000000000}</displayFormat>
        <label>Account Partner Contract #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Partner Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>