unpackaged/main/default/objects/Account_Partner_Contract__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Line</label>
    <referenceTo>Product_Line__c</referenceTo>
    <relationshipLabel>Account Partner Contracts</relationshipLabel>
    <relationshipName>Account_Partner_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>