unpackaged/main/default/objects/Account_Partner_Contract__c/fields/TECH_CEGID_Discount_Number__c.field-meta.xml
<CustomField>
    <fullName>TECH_CEGID_Discount_Number__c</fullName>
    <label>CEGID Discount #</label>
    <summaryForeignKey>CEGID_Discount__c.Account_Partner_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>